Feat: Adding Practices

--- a/Practice/01.md
+++ b/Practice/01.md
@@ -1,3 +1,96 @@
-1. Subir CDL's de participantes y posiciones
-2. Crear CDL's Personalizados
-3. Crear un data extract
+# Practice 1
+Eres el dueño de una importante empresa de tecnología y tienes a tu cargo diferentes empleados que ocupan difernetes áreas y departementeos de la empresa, los caules son los siguientes:
+
+|ID| Nombre         | Apellido     | Edad | Genero| Salario  | Fecha de Contratacion|
+|----|----------------|--------------|------|-------|--------------|---------|
+|1| Juan            | Perez     | 25   | M     | 38000.00 | 2023-04-20           |
+|2| Maria           | Gomez    | 22   | F    | 38000.00 | 2023-04-20           |
+|3| Carlos            | Lopez     | 28   | M     | 38000.00 | 2023-04-20           |
+|4| Ana           | Martinez    | 24   | F     | 38000.00 | 2023-04-20           |
+|5| Luis            | Rodriguez     | 30   | M     | 38000.00 | 2023-04-20           |
+|6| Sofia           | Hernandez    | 26   | F     | 38000.00 | 2023-04-20           |
+|7| Diego            | Fernandez     | 23   | M     | 38000.00 | 2023-04-20           |
+|8| Laura          | Diaz    | 21   | F     | 38000.00 | 2023-04-20           |
+|9| Pedro         | Sanchez   | 27   | M    | 38000.00 | 2023-04-20           |
+
+Los cargos que ocupan cada uno de ellos son los listados a continuación:
+
+
+|ID| Nombre         | Apellido     | Cargo | Departamento |
+|---------------|--------------|-------|---------------|---|
+|1|Juan|Perez|AI Engineer|Artificial Intelligence|
+|2|Maria|Gomez|Cybersecurity Analyst|Cybersecurity|
+|3|Carlos|Lopez|Quantum Engineer|Quantum Computing|
+|4|Ana|Martinez|Data Analyst|Data Science|
+|5|Luis|Rodriguez|Machine Learning Engineer|Machine Learning|
+|6|Sofia|Hernandez|Cybersecurity Analyst|Cybersecurity|
+|7|Diego|Fernandez|Quantum Engineer|Quantum Computing|
+|8|Laura|Diaz|Cybersecurity Specialist|Cybersecurity|
+|9|Pedro|Sanchez|Cybersecurity Analyst|Cybersecurity|
+
+En cuanto a su nivel de experiencia, los proyectos en los que está trabajando y su ubicación de trabajo, es decir, si laboran en oficina o remoto, se listan a detalle en la siguiente lista:
+
+|ID|Nombre|Apellido|Proyecto|Ubicacion|Nivel deExperiencia|
+|---|---|---|---|---|---|
+|1|Juan|Perez|Modelo de Predicción de Ventas|Remoto|Senior|
+|2|Maria|Gomez|Protección de Red Interna|Oficina|Senior|
+|3|Carlos|Lopez|Desarrollo de Qbits|Remoto|Mid-Level|
+|4|Ana|Martinez|Manipulación y Limpieza de Datos Masivos|Híbrido|Junior|
+|5|Luis|Rodriguez|Sistema de Recomendación|Oficina|Mid-Level|
+|6|Sofia|Hernandez|Auditoría de Seguridad|Híbrido|Senior|
+|7|Diego|Fernandez|Optimización de algoritmos|Remoto|Junior|
+|8|Laura|Diaz|Seguridad en la Nube|Remoto|Senior|
+|9|Pedro|Sanchez|Seguridad Entornos Empresariales|Oficina|Mid-Level|
+
+Con base en la información provista, s proponen los siguientes ejecicios:
+
+1. Sube un CDL de partiicpantes (OGPT) con la información correspondiente (inventa tus propios nombres y los ID de los empleados). Toma Screenshot del Express Data Loader (XDL) con el registro subido del archivo en succcess y una del archivo como tal.
+
+2. Sube un CDL de posiciones (OGPO) de acuerdo a la información de los empleados (inventa tus propios cargos y departamentos). Toma Screenshot del Express Data Loader (XDL) con el registro subido del archivo en succcess y una del archivo como tal.
+
+3. Crea un CDL personalizado que contenga el nivel de experiencia de cada uno de los empleados, los proyectos en los que estan involucrados Y la ubicación de trabajo (Toma captura del CDL subido correctamente, de la configuración del File Type y del Stored Procedure)
+
+4. Crea una Función que retorne el número de empleados de acuerdo al Departamento:
+
+```
+Artificial Intelligence -> 3
+Cybersecurity -> 3
+Data Science -> 3
+```
+
+4. Crea una Función que retorne el número de empleados de acuerdo a los niveles de experiencia (Senior, Mid-Level, Junior)
+
+```
+Senior -> 3
+Mid-Level -> 2
+Junior -> 2
+```
+
+5. Crea un Query For String (Q4S) que retorne el tipo de cargo de un empleado de acuerdo a su ID:
+```
+311288931 -> AI Engineer
+311288932 -> Security Analyst 
+311288933 -> Data Analyst
+```
+
+5. Crea un Query For Value (Q4V) que retorne el numero de empleado de acuerdo a su cargo:
+```
+Cybersecurity Analyst -> 2
+Quantum Engineer -> 2
+Machine Learning Engineer -> 1
+```
+
+6. Responde las siguientes preguntas (Muestra el resultado haciendo consultas en la BD):
+ - ¿Cuántos trabajadores son Senior y trabajan en Inteligencia Artificial?
+ - ¿Cuántos trabajadores son Junior y trabajan en Computación Cuántica?
+ - ¿Cuántos trabajadores son Senior y trabajan en Ciberseguridad?
+
+
+7. Crea un Data Extract que contenga la siguiente información:
+
+|ID | Nombre Completo | Cargo | Nivel de Experiencia | Proyecto |
+|---|---|---|---|---|
+
+
+
+
