feat: Fixing practice and adding DB final exam

--- a/Practice/01.md
+++ b/Practice/01.md
@@ -86,7 +86,7 @@ Machine Learning Engineer -> 1
  - ¿Cuántos trabajadores son Senior y trabajan en Ciberseguridad?
 
 
-7. Crea un Data Extract que contenga la siguiente información:
+7. Crea un Data Extract que contenga la siguiente información (Muestra la captura de la configuración del Data Type en el XDL y el Stored Procedure):
 
 |ID | Nombre Completo | Cargo | Nivel de Experiencia | Proyecto |
 |---|---|---|---|---|
